examples/ill-formed/primitives/UndefinedType.primitive
Primitive InvalidType(Int x) {
    Bla test = x;
}
